--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
           <!-- <div class="center">
             <span class="image-profile"><img src="images/profile_photo.png" alt="" /></span>
           </div> -->
-          <img src="images/profile_photo.png" style="max-width: 100%; height: auto;">
+
+          <img src="images/profile_photo2.jpg" style="max-width: 34%; height: auto;">
+          <img src="images/profile_photo.png" style="max-width: 40%; height: auto;">
+
           <div class="row">
             <h2>
               I'm an inquisitive Software / Computer Engineer eager to learn more
