uploaded plc slave devices

--- a/archived.html
+++ b/archived.html
@@ -45,11 +45,10 @@
 									<li><a href="#">Veroeros feugiat</a></li>
 								</ul>
 							</li> -->
-					<li><a href="featured.html">Featured</a></li>
-					<!-- <li><a href="no-sidebar2.html">Electronics</a></li> -->
-					<li class="current"><a href="archived.html">Archived</a></li>
-					<li><a href="gamedev.html">Game Development</a></li>
-					<!-- <li><a href="articleexample.html">ArticleExample</a></li> -->
+							<li ><a href="featured.html">Featured</a></li>
+							<li><a href="automation.html">Automation</a></li>
+							<li><a href="gamedev.html">Game Development</a></li>
+							<li class="current"><a href="archived.html">Archived</a></li>
 				</ul>
 			</nav>
 
@@ -293,6 +292,33 @@
 								src="articleAssets\Repurposing-An-Old-PC-Into-Media-Server\repurpose_old_PC_1.jpg"
 								alt="" /></span>
 					</article>
+
+										<!-- Article//// -->
+					<!-- CTA -->
+					<section id="cta" class="wrapper style3">
+						<div class="container">
+						</div>
+					</section>
+					<article>
+						<header>
+							<h2><a href="Testing-OpenPLC-Devices.html">Testing OpenPLC Runtime on Raspberry Pi with Various Slave Devices</a></h2>
+							<p>TAGS: electronics; automation; industrial; PLC; OpenPLC; Raspberry Pi; Arduino; ESP;
+								Modbus;
+							</p>
+						</header>
+						<h3>Why I Did This</h3>
+						<p>
+							In my pursuit to experience industrial automation and PLC programming, I wanted to test the
+							OpenPLC runtime on my Raspberry Pi. <br> I wanted to see how effective this runtime was and
+							how effective the ability to connect to slave devices was. OpenPLC allows users to install
+							the runtime (the PLC cycle) on a Raspberry Pi, but also can program Arduinos and ESP
+							microcontrollers to act as I/O extensions (giving the ability to connect more sensors
+							actuators, but also wireless connectivity), all apparently with the help of Modbus communication.
+						</p>
+						<span class="image featured"><img src="articleAssets/Testing-OpenPLC-Devices/openplcpiandslavedevices3.png"
+								alt="" /></span>
+					</article>
+					
 
 					<!-- Article//// -->
 					<!-- CTA -->
