--- a/gamedev.html
+++ b/gamedev.html
@@ -66,11 +66,10 @@
 									<li><a href="#">Veroeros feugiat</a></li>
 								</ul>
 							</li> -->
-					<li><a href="featured.html">Featured</a></li>
-					<!-- <li><a href="no-sidebar2.html">Electronics</a></li> -->
-					<li><a href="archived.html">Archived</a></li>
-					<li class="current"><a href="gamedev.html">Game Development</a></li>
-					<!-- <li><a href="articleexample.html">ArticleExample</a></li> -->
+							<li ><a href="featured.html">Featured</a></li>
+							<li><a href="automation.html">Automation</a></li>
+							<li class="current"><a href="gamedev.html">Game Development</a></li>
+							<li ><a href="archived.html">Archived</a></li>
 				</ul>
 			</nav>
 
