--- a/index.html
+++ b/index.html
@@ -47,11 +47,10 @@
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li> -->
-          <li><a href="featured.html">Featured</a></li>
-          <!-- <li><a href="no-sidebar2.html">Electronics</a></li> -->
-          <li><a href="archived.html">Archived</a></li>
-          <li><a href="gamedev.html">Game Development</a></li>
-          <!-- <li><a href="articleexample.html">ArticleExample</a></li> -->
+                <li ><a href="featured.html">Featured</a></li>
+                <li><a href="automation.html">Automation</a></li>
+                <li><a href="gamedev.html">Game Development</a></li>
+                <li><a href="archived.html">Archived</a></li>
         </ul>
       </nav>
     </div>
@@ -81,6 +80,33 @@
                   <p>Let's see ALL of what I've experienced. <br> </p>
                 </div>
               </section>
+            </div>
+          </div>
+        </section>
+        <section class="wrapper style1">
+          <div class="container">
+            <div class="row gtr-200">
+              <section class="col-4 col-12-narrower">
+                <div class="box highlight">
+                  <i class="icon solid major fa-viruses"></i>
+                  <h3><a href="automation.html">Automation</a></h3>
+                  <p>Let's see what I've experienced with automation (Industrial; Operational Technology; PLC; SCADA). <br> </p>
+                </div>
+              </section>
+              <section class="col-4 col-12-narrower">
+                <div class="box highlight">
+                  <i class="icon solid major fa-gamepad"></i>
+                  <h3><a href="gamedev.html">Game Development</a></h3>
+                  <p>Let's see my experiences in game development. <br> </p>
+                </div>
+              </section>
+              <!-- <section class="col-4 col-12-narrower">
+                <div class="box highlight">
+                  <i class="icon solid major fa-leaf"></i>
+                  <h3><a href="sustainability.html">Renewables and Sustainability</a></h3>
+                  <p>Let's see my experiences with concepts around renewables and sustainability. <br> </p>
+                </div>
+              </section> -->
             </div>
           </div>
         </section>
